# atomic-mesh

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: ci.yml
cpp/include/: hotpath.h
cpp/src/: engine.cpp  microprice.cpp  orderbook.cpp  ringbuf.cpp  signal.cpp
crates/atomic-bus/: Cargo.toml
crates/atomic-bus/src/: lib.rs  ring.rs  sequencer.rs
crates/atomic-core/: Cargo.toml
crates/atomic-core/src/: clock.rs  error.rs  event.rs  lib.rs  metrics.rs  node.rs  snapshot.rs  types.rs
crates/atomic-execution/: Cargo.toml
crates/atomic-execution/src/: lib.rs  simulator.rs  state_machine.rs
crates/atomic-feed/: Cargo.toml
crates/atomic-feed/src/: binance.rs  connector.rs  gateway.rs  lib.rs  normalizer.rs
crates/atomic-hotpath/: Cargo.toml  build.rs
crates/atomic-hotpath/benches/: engine.rs
crates/atomic-hotpath/src/: lib.rs
crates/atomic-node/: Cargo.toml
crates/atomic-node/src/: config.rs  dashboard.rs  lib.rs  main.rs  recovery.rs
crates/atomic-node/tests/: determinism.rs  e2e.rs
crates/atomic-orderbook/: Cargo.toml
crates/atomic-orderbook/src/: book.rs
crates/atomic-replay/: Cargo.toml
crates/atomic-replay/src/: lib.rs  log.rs  player.rs
crates/atomic-risk/: Cargo.toml
crates/atomic-risk/src/: limits.rs
crates/atomic-router/: Cargo.toml
crates/atomic-router/src/: router.rs
crates/atomic-strategy/: Cargo.toml
crates/atomic-strategy/src/: engine.rs  inventory.rs  lib.rs  market_maker.rs  microprice.rs  toxicity.rs  traits.rs
crates/atomic-transport/: Cargo.toml
crates/atomic-transport/src/: lib.rs  mesh.rs  protocol.rs
dashboard/: index.html
data/: equity.csv
results/: BACKTEST_REPORT.md  equity.csv
