[package]
name = "atomic-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types, events, and deterministic primitives for Atomic Mesh"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
hex = { workspace = true }
