[package]
name = "atomic-hotpath"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C++ hot-path FFI for nanosecond-scale order book + strategy processing"

[dependencies]
atomic-core = { path = "../atomic-core" }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine"
harness = false

[build-dependencies]
cc = "1"
