[package]
name = "atomic-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic-core = { path = "../atomic-core" }
atomic-bus = { path = "../atomic-bus" }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
atomic-execution = { path = "../atomic-execution" }
